fixed news overlap

--- a/web/themes/custom/gbv/scss/custom/events-news.scss
+++ b/web/themes/custom/gbv/scss/custom/events-news.scss
@@ -52,7 +52,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 350px;
+        // width: 350px;
         .news-date{
             color: $gray-800;
             font-size: 18px;
